# rand04_compat

./: Cargo.toml  README.md
rand04/: Cargo.toml  README.md
rand04/src/: lib.rs
src/: lib.rs
