[package]
name = "rand04"
description = "Re-export of rand 0.4, so it can be used together with a later version of rand."
version = "0.1.1"
license = "MIT/Apache-2.0"
repository = "https://github.com/poanetwork/rand04_compat"
readme = "README.md"
keywords = ["random", "rng"]
categories = ["algorithms", "no-std"]
authors = ["Andreas Fackler <AndreasFackler@gmx.de>"]
edition = "2018"

[dependencies]
rand = { version = "0.4.3", default-features = false }

[features]
default = ["std"]
std = ["rand/std"]
